# Deckdown

./: .gitignore  AGENTS.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  deploy-pages.yml  desktop.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  sample.ts  styles.css
docs/: ARCHITECTURE.md  CI_CD.md  FORMAT.md  ROADMAP.md  SPEC.md  TECH_STACK.md
skills/deckdown/: SKILL.md
skills/deckdown/references/: authoring-guide.md  format.md
